Allow mock_uss to be omitted from F3548-related test configurations

--- a/monitoring/uss_qualifier/suites/astm/utm/f3548_21.yaml
+++ b/monitoring/uss_qualifier/suites/astm/utm/f3548_21.yaml
@@ -10,7 +10,7 @@ resources:
   nominal_planning_selector: resources.flight_planning.FlightPlannerCombinationSelectorResource?
   priority_planning_selector: resources.flight_planning.FlightPlannerCombinationSelectorResource?
   second_utm_auth: resources.communications.AuthAdapterResource?
-  mock_uss: resources.interuss.mock_uss.client.MockUSSResource
+  mock_uss: resources.interuss.mock_uss.client.MockUSSResource?
   id_generator: resources.interuss.IDGeneratorResource
 actions:
 - action_generator:
