--- a/monitoring/uss_qualifier/suites/uspace/flight_auth.yaml
+++ b/monitoring/uss_qualifier/suites/uspace/flight_auth.yaml
@@ -6,7 +6,7 @@ resources:
   invalid_flight_intents: resources.flight_planning.FlightIntentsResource
   non_conflicting_flights: resources.flight_planning.FlightIntentsResource
   flight_planners: resources.flight_planning.FlightPlannersResource
-  mock_uss: resources.interuss.mock_uss.client.MockUSSResource
+  mock_uss: resources.interuss.mock_uss.client.MockUSSResource?
   dss: resources.astm.f3548.v21.DSSInstanceResource
   dss_instances: resources.astm.f3548.v21.DSSInstancesResource?
   id_generator: resources.interuss.IDGeneratorResource
