[uss_qualifier/test_data/che/conflicting_flights/flight1m_planned] Fix area override

--- a/monitoring/uss_qualifier/test_data/che/flight_intents/conflicting_flights.yaml
+++ b/monitoring/uss_qualifier/test_data/che/flight_intents/conflicting_flights.yaml
@@ -69,9 +69,8 @@ intents:
       mutation:
         basic_information:
           area:
-            - outline_polygon:
-                altitude_lower:
-                  value: 575.03
+            - altitude_lower:
+                value: 575.03
 
   flight1c_planned:
     delta:
