--- a/monitoring/uss_qualifier/suites/uspace/flight_auth.yaml
+++ b/monitoring/uss_qualifier/suites/uspace/flight_auth.yaml
@@ -31,6 +31,7 @@ actions:
     resources:
       flight_planners: flight_planners
       flight_intents: invalid_flight_auth_flights
+      mock_uss: mock_uss
   on_failure: Abort
 - action_generator:
     generator_type: action_generators.flight_planning.FlightPlannerCombinations
