--- a/monitoring/uss_qualifier/suites/uspace/required_services.yaml
+++ b/monitoring/uss_qualifier/suites/uspace/required_services.yaml
@@ -1,6 +1,6 @@
 name: U-space required services
 resources:
-  version_providers: resources.versioning.VersionProvidersResource?
+  test_env_version_providers: resources.versioning.VersionProvidersResource?
 
   conflicting_flights: resources.flight_planning.FlightIntentsResource
   priority_preemption_flights: resources.flight_planning.FlightIntentsResource
@@ -31,12 +31,13 @@ actions:
 - test_scenario:
     scenario_type: scenarios.versioning.GetSystemVersions
     resources:
-      version_providers: version_providers
+      test_env_version_providers: test_env_version_providers
       system_identity: system_identity
     on_failure: Continue
 - test_suite:
     suite_type: suites.uspace.flight_auth
     resources:
+      test_env_version_providers: test_env_version_providers?
       conflicting_flights: conflicting_flights
       priority_preemption_flights: priority_preemption_flights
       invalid_flight_intents: invalid_flight_intents
@@ -49,6 +50,7 @@ actions:
       id_generator: id_generator
       second_utm_auth: second_utm_auth?
       planning_area: planning_area
+      system_identity: system_identity
   on_failure: Continue
 - test_suite:
     suite_type: suites.uspace.network_identification
