--- a/monitoring/uss_qualifier/suites/uspace/flight_auth.yaml
+++ b/monitoring/uss_qualifier/suites/uspace/flight_auth.yaml
@@ -1,5 +1,6 @@
 name: U-space flight authorisation
 resources:
+  test_env_version_providers: resources.versioning.VersionProvidersResource?
   conflicting_flights: resources.flight_planning.FlightIntentsResource
   priority_preemption_flights: resources.flight_planning.FlightIntentsResource
   invalid_flight_auth_flights: resources.flight_planning.FlightIntentsResource
@@ -12,10 +13,12 @@ resources:
   id_generator: resources.interuss.IDGeneratorResource
   second_utm_auth: resources.communications.AuthAdapterResource?
   planning_area: resources.astm.f3548.v21.PlanningAreaResource
+  system_identity: resources.versioning.SystemIdentityResource?
 actions:
 - test_suite:
     suite_type: suites.astm.utm.f3548_21
     resources:
+      test_env_version_providers: test_env_version_providers?
       conflicting_flights: conflicting_flights
       priority_preemption_flights: priority_preemption_flights
       invalid_flight_intents: invalid_flight_intents
@@ -27,6 +30,7 @@ actions:
       id_generator: id_generator
       second_utm_auth: second_utm_auth
       planning_area: planning_area
+      system_identity: system_identity?
   on_failure: Continue
 - test_scenario:
     scenario_type: scenarios.flight_planning.PrepareFlightPlanners
