--- a/monitoring/mock_uss/docker-compose.yaml
+++ b/monitoring/mock_uss/docker-compose.yaml
@@ -35,6 +35,9 @@ services:
       - interop_ecosystem_network
     extra_hosts:
       - host.docker.internal:host-gateway
+    profiles:
+      - '' # starts when no profile is provided
+      - scd
 
   mock_uss_scdsc_b:
     container_name: mock_uss_scdsc_b
@@ -60,6 +63,9 @@ services:
       - interop_ecosystem_network
     extra_hosts:
       - host.docker.internal:host-gateway
+    profiles:
+      - '' # starts when no profile is provided
+      - scd
 
   mock_uss_geoawareness:
     container_name: mock_uss_geoawareness
@@ -82,6 +88,9 @@ services:
       - interop_ecosystem_network
     extra_hosts:
       - host.docker.internal:host-gateway
+    profiles:
+      - '' # starts when no profile is provided
+      - geoawareness
 
   mock_uss_ridsp:
     container_name: mock_uss_ridsp
@@ -108,6 +117,9 @@ services:
       - interop_ecosystem_network
     extra_hosts:
       - host.docker.internal:host-gateway
+    profiles:
+      - '' # starts when no profile is provided
+      - rid
 
   mock_uss_riddp:
     container_name: mock_uss_riddp
@@ -134,6 +146,9 @@ services:
       - interop_ecosystem_network
     extra_hosts:
       - host.docker.internal:host-gateway
+    profiles:
+      - '' # starts when no profile is provided
+      - rid
 
   mock_uss_ridsp_v19:
     container_name: mock_uss_ridsp_v19
@@ -160,6 +175,9 @@ services:
       - interop_ecosystem_network
     extra_hosts:
       - host.docker.internal:host-gateway
+    profiles:
+      - '' # starts when no profile is provided
+      - rid_v19
 
   mock_uss_riddp_v19:
     container_name: mock_uss_riddp_v19
@@ -186,6 +204,9 @@ services:
       - interop_ecosystem_network
     extra_hosts:
       - host.docker.internal:host-gateway
+    profiles:
+      - '' # starts when no profile is provided
+      - rid_v19
 
   mock_uss_tracer:
     container_name: mock_uss_tracer
@@ -215,6 +236,11 @@ services:
       - interop_ecosystem_network
     extra_hosts:
       - host.docker.internal:host-gateway
+    profiles:
+      - '' # starts when no profile is provided
+      - scd
+      - rid
+      - rid_v19
 
   mock_uss_scdsc_interaction_log:
     container_name: mock_uss_scdsc_interaction_log
@@ -243,6 +269,9 @@ services:
       - interop_ecosystem_network
     extra_hosts:
       - host.docker.internal:host-gateway
+    profiles:
+      - '' # starts when no profile is provided
+      - scd
 
 networks:
   interop_ecosystem_network:
