DSS0210,2 sync entity references
PR comment integration

--- a/monitoring/uss_qualifier/configurations/dev/message_signing.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/message_signing.yaml
@@ -60,6 +60,7 @@ v1:
           dss_instances: scd_dss_instances
           id_generator: id_generator
           second_utm_auth: second_utm_auth
+          utm_client_identity: utm_client_identity
           planning_area: che_planning_area
           problematically_big_area: che_problematically_big_area
     execution:
