--- a/monitoring/uss_qualifier/suites/uspace/flight_auth.yaml
+++ b/monitoring/uss_qualifier/suites/uspace/flight_auth.yaml
@@ -14,6 +14,7 @@ resources:
   dss_crdb_cluster: resources.interuss.crdb.CockroachDBClusterResource?
   id_generator: resources.interuss.IDGeneratorResource
   second_utm_auth: resources.communications.AuthAdapterResource?
+  utm_client_identity: resources.communications.ClientIdentityResource
   planning_area: resources.astm.f3548.v21.PlanningAreaResource
   problematically_big_area: resources.VerticesResource
   system_identity: resources.versioning.SystemIdentityResource?
@@ -34,6 +35,7 @@ actions:
       dss_crdb_cluster: dss_crdb_cluster?
       id_generator: id_generator
       second_utm_auth: second_utm_auth
+      utm_client_identity: utm_client_identity
       planning_area: planning_area
       problematically_big_area: problematically_big_area
       system_identity: system_identity?
