--- a/monitoring/uss_qualifier/suites/uspace/required_services.yaml
+++ b/monitoring/uss_qualifier/suites/uspace/required_services.yaml
@@ -54,6 +54,7 @@ actions:
       dss_crdb_cluster: dss_crdb_cluster?
       id_generator: id_generator
       second_utm_auth: second_utm_auth?
+      utm_client_identity: utm_client_identity
       planning_area: planning_area
       problematically_big_area: problematically_big_area
       system_identity: system_identity
