--- a/monitoring/uss_qualifier/test_data/flight_intents/standard/invalid_flight_intents.yaml
+++ b/monitoring/uss_qualifier/test_data/flight_intents/standard/invalid_flight_intents.yaml
@@ -54,6 +54,25 @@ intents:
                     time_during_test: StartOfTestRun
                   offset: 32d
 
+  invalid_recently_ended:
+    delta:
+      source: valid_flight
+      mutation:
+        # end_time < now - TimeSyncMaxDifferentialSeconds = 5 seconds
+        basic_information:
+          area:
+            - start_time:
+                offset_from:
+                  starting_from:
+                    time_during_test: TimeOfEvaluation
+                  offset: -1m
+              end_time:
+                offset_from:
+                  starting_from:
+                    time_during_test: TimeOfEvaluation
+                  offset: -5s
+              duration:
+
   valid_conflict_tiny_overlap:
     delta:
       source: valid_flight
