--- a/monitoring/uss_qualifier/suites/astm/utm/dss_probing.yaml
+++ b/monitoring/uss_qualifier/suites/astm/utm/dss_probing.yaml
@@ -52,3 +52,7 @@ actions:
       scenario_type: scenarios.astm.utm.dss.CRDBAccess
       resources:
         crdb_cluster: dss_crdb_cluster
+  - test_scenario:
+      scenario_type: scenarios.astm.utm.dss.Report
+      resources:
+        dss: dss
