[uss_qualifier] RID CRDBAccess scenario: Fix resources mapping

--- a/monitoring/uss_qualifier/suites/astm/netrid/f3411_22a/dss_probing.yaml
+++ b/monitoring/uss_qualifier/suites/astm/netrid/f3411_22a/dss_probing.yaml
@@ -61,7 +61,8 @@ actions:
         isa: isa
   - test_scenario:
       scenario_type: scenarios.astm.netrid.v22a.dss.CRDBAccess
-      crdb_cluster: dss_crdb_cluster
+      resources:
+        crdb_cluster: dss_crdb_cluster
       on_failure: Continue
   - test_scenario:
       scenario_type: scenarios.astm.netrid.v22a.dss.HeavyTrafficConcurrent
