--- a/monitoring/mock_uss/docker-compose.yaml
+++ b/monitoring/mock_uss/docker-compose.yaml
@@ -221,6 +221,7 @@ services:
       - MOCK_USS_TOKEN_AUDIENCE=tracer.uss4.localutm,localhost,host.docker.internal
       - MOCK_USS_BASE_URL=http://tracer.uss4.localutm
       - MOCK_USS_TRACER_OUTPUT_FOLDER=output/tracer
+      - MOCK_USS_TRACER_UI_USERS=admin@admin=admin;viewer=
       - MOCK_USS_SERVICES=tracer
       - MOCK_USS_PORT=80
     expose:
