--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ bc-jsonpath-ng==1.5.9  # uss_qualifier
 cryptography==42.0.4
 faker===8.1.0  # uss_qualifier
 flask==2.3.3
+Flask-HTTPAuth==4.8.0  # mock_uss tracer
 geojson===2.5.0  # uss_qualifier
 gevent==22.10.2  # mock_uss / gunicorn worker
 google-auth==1.6.3
