Add aggregate participants to tested requirements

--- a/monitoring/uss_qualifier/configurations/dev/dss_probing.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/dss_probing.yaml
@@ -51,7 +51,7 @@ v1:
                   - astm.f3411.v19.dss_provider
                   - astm.f3548.v21.dss_provider
         participant_requirements:
-          uss1: all_astm_dss_requirements
+          uss1: null
           uss2: all_astm_dss_requirements
   validation:
     criteria:
