--- a/monitoring/uss_qualifier/suites/astm/utm/dss_probing.yaml
+++ b/monitoring/uss_qualifier/suites/astm/utm/dss_probing.yaml
@@ -77,6 +77,7 @@ actions:
       scenario_type: scenarios.astm.utm.dss.CRDBAccess
       resources:
         crdb_cluster: dss_crdb_cluster
+    on_failure: Continue
   - test_scenario:
       scenario_type: scenarios.astm.utm.dss.Report
       resources:
